# ha-nad-remote

./: CONTRIBUTING.md  README.md  hacs.json  pyproject.toml
custom_components/nad2/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py  switch.py
custom_components/nad2/translations/: en.json
custom_components/nad_remote/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  entity.py  manifest.json  media_player.py  sensor.py  switch.py
custom_components/nad_remote/nad_receiver/: __init__.py  nad_commands.py  nad_fake_transport.py
custom_components/nad_remote/translations/: en.json
local/: deploy.sh  generate_manifest.py
maintenance/: generate_manifest.py
tests/: __init__.py  conftest.py  const.py  test_api.py  test_config_flow.py  test_init.py  test_switch.py
