[tool.poetry]
authors = ["Jon Connell <python@figsandfudge.com>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
description = "Kingspan Connect Sensor integration for Home Assistant"
documentation = "https://github.com/masaccio/ha-nad-remote/blob/main/Info.md"
license = "MIT"
name = "ha-nad2"
packages = [{include = "custom_components/nad_remote"}]
readme = "Info.md"
repository = "https://github.com/masaccio/ha-nad-remote"
version = "1.3.0"

[tool.poetry.dependencies]
async-timeout = "^4.0.2"
homeassistant = "^2022.12.4"
nad_receiver = "0.3.0"
python = "^3.9"
voluptuous = "^0.13.1"
zeroconf = "^0.44.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
pylama = "^8.4.1"
pytest-homeassistant-custom-component = "0.12.33"
toml = "^0.10.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.coverage.run]
branch = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning --cov=custom_components/nad2"
minversion = 6.0
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py39, py310, py311
[testenv]
allowlist_externals = poetry
commands_pre = poetry install --no-root --sync
commands = poetry run -vvv pytest --import-mode importlib
"""

# linter settings
[tool.pylama]
linters = "pylint,mccabe,pyflakes"
max_line_length = 100
skip = ".tox/*"

[tool.pylama.linter.pycodestyle]
format = "pylint"
ignore = "E203,E231,W503"

[tool.black]
line-length = 100

[tool.pylama.linter.mccabe]
max-complexity = 15

[tool.pylama.linter.pyflakes]
builtins = "_"
